--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,9 @@ nav ul.menu-list li, nav a{
 
 .item{
     height: auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 3%;
 }
 
 .item img{
